--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "endpoint-practice",
 	"version": "0.0.1",
 	"private": true,
+	"prisma": {
+		"seed": "pnpm dlx vite-node prisma/seed.ts"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -31,5 +34,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@prisma/client": "^5.7.0"
+	}
 }
